--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             # Haskell Paris
             ### Usage Overview of Lens/Prism
 
+            slides at https://github.com/erebe/haskell-paris-29-11-2017
+
             29/11/2017 - Romain GERARD
 
           </textarea>
