--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             * To atteign enlightment ?
 
             Be aware of your motivations in order to not lost it half-way
+
             Haskell is flawed, don't expect perfection
 
           </textarea>
@@ -139,12 +140,30 @@
 
         <section data-markdown>
           <textarea data-template>
-            ### Remember your initial motivation(s)
+            ### Psychological advises
 
+            * Accept to start from ground 0
+              * Avoid telling yourself, "I know how to do it easily with X why it is so hard"
             * It is normal to feel overwhelmed even after a long period of time
-            * Take pleasure solving problems in a different way
+              * Take pleasure solving problems in a different way
+              * Ask yourself how to solve this problem with functionnal programming
             * It will take time, so enjoy Haskell as an atelic activity at first
+              * Don't get too high expectation - The language is flawed - From yourself
             * Take time to step back and mesure your growth
+          </textarea>
+        </section>
+
+        <section data-markdown>
+          <textarea data-template>
+            ### In the end
+
+            * Learning Haskell is worth it
+              * It does not have to be your main programming language
+            * You will learn how to use Types to make your program safer, more readable
+            * You will learn how to make things composable, modelize better
+            * The academic community is interesting
+              * Learning points of tensions between ideas
+              * Give you a lot of historical background
           </textarea>
         </section>
 			</div>
