--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               * Ask yourself how to solve this problem with functionnal programming
             * It will take time, so enjoy Haskell as an atelic activity at first
               * Don't get too high expectation - The language is flawed - From yourself
-            * Take time to step back and mesure your growth
+            * Take time to step back to measure your growth
           </textarea>
         </section>
 
